Bug 190232 - The message list displays the sender name in the 'sent' folders.
Summary: The message list displays the sender name in the 'sent' folders.
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 200065 201886 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-21 10:35 UTC by Peter Eisentraut
Modified: 2009-08-05 21:00 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
fix against trunk kdepim/kmail (364 bytes, patch)
2009-06-15 21:32 UTC, Frank Niethardt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Eisentraut 2009-04-21 10:35:22 UTC
Version:            (using KDE 4.2.2)
Installed from:    Debian testing/unstable Packages

In the properties of a folder, you can choose under "Show column" between "Default", "Sender", "Receiver".  As far as I can tell, "Default" always means "Receiver".  I guess a more reasonable behavior would be that the default would be equivalent to "Sender" if the folder is used to store sent messages.  (KMail evidently detects the sent mail folders correctly, because it applies different icons to them.)  Otherwise, what is the purpose of "Default" anyway?
Comment 1 Jonathan Marten 2009-04-21 12:56:46 UTC
Confirmed with current trunk (r956772) for outbox and sent-mail folders.
Regression from KDE 3.
Comment 2 Christophe Marin 2009-05-23 18:50:12 UTC
AFAICS, the behaviour is wrong only for the 'sent' folders. Changing the title.
Comment 3 Frank Niethardt 2009-06-15 21:32:16 UTC
Created attachment 34557 [details]
fix against trunk kdepim/kmail

Problem was, that if the user set Default in "Sender/Receiver column" the whoField isn't initialized correctly on kmail startup.
Comment 4 Thomas McGuire 2009-06-16 22:25:45 UTC
SVN commit 982805 by tmcguire:

Make the sent-mail folder show the receiver instead of the sender again.

Patch by Frank Thieme <frank at fthieme dot net>, thank you!

BUG: 190232
MERGE: e4
http://reviewboard.kde.org/r/848/



 M  +2 -1      kmfolder.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=982805
Comment 5 Thomas McGuire 2009-06-17 14:48:31 UTC
SVN commit 982982 by tmcguire:

Crossport r982805 by tmcguire from trunk to the enterprise4 branch:

Make the sent-mail folder show the receiver instead of the sender again.

Patch by Frank Thieme <frank at fthieme dot net>, thank you!

CCBUG: 190232
MERGE: e4
http://reviewboard.kde.org/r/848/




 M  +2 -1      kmfolder.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=982982
Comment 6 Christophe Marin 2009-07-13 22:13:13 UTC
*** Bug 200065 has been marked as a duplicate of this bug. ***
Comment 7 Maurice Batey 2009-07-13 23:44:36 UTC
So how (and when) is this matter being resolved, please?
Comment 8 Christophe Marin 2009-07-13 23:55:40 UTC
It is resolved and the fix will be in KDE 4.3

look at comment #4 for the details of the patch.
Comment 9 Maurice Batey 2009-07-14 12:21:26 UTC
OK - many thanks, and well done! Much appreciated...
Comment 10 Christophe Marin 2009-07-29 14:46:44 UTC
*** Bug 201886 has been marked as a duplicate of this bug. ***
Comment 11 Vsevolod Krishchenko 2009-08-05 20:55:17 UTC
Bug is still here in 4.3.0, kmail 1.11.4.
Comment 12 Vsevolod Krishchenko 2009-08-05 21:00:42 UTC
Sorry, my mistake.