Make the sent-mail folder show the receiver instead of the sender again.

Patch by Frank Thieme <frank at fthieme dot net>, thank you!

BUG: 190232
MERGE: e4
http://reviewboard.kde.org/r/848/


svn path=/trunk/KDE/kdepim/; revision=982805